chore(versioning): add VERSION convention and normalize active dialplan files to ASCII-safe comments

--- a/asterisk_etc/extensions-features.conf
+++ b/asterisk_etc/extensions-features.conf
@@ -1,6 +1,6 @@
 ; ============================================
 ; MAGNUS PBX - Feature Codes
-; Códigos de funcionalidades (*43, *97, etc)
+; Codigos de funcionalidades (*43, *97, etc)
 ; ============================================
 
 ; ============================================
@@ -8,11 +8,11 @@
 ; ============================================
 [features-base](!)
 ; Template herdado por todos os tenants
-; Contém apenas os feature codes
+; Contem apenas os feature codes
 
-; ===== TESTES E DIAGNÓSTICO =====
+; ===== TESTES E DIAGNOSTICO =====
 
-; *43 - Echo Test (Teste de Áudio)
+; *43 - Echo Test (Teste de Audio)
 exten => *43,1,NoOp(=== Echo Test: ${CALLERID(num)} ===)
  same => n,Answer()
  same => n,Playback(demo-echotest)
@@ -28,7 +28,7 @@ exten => *98,1,NoOp(=== Status Check ===)
 
 ; ===== VOICEMAIL =====
 
-; *97 - VoiceMail Check (Própria caixa postal)
+; *97 - VoiceMail Check (Propria caixa postal)
 exten => *97,1,NoOp(=== VoiceMail Main: ${CALLERID(num)} ===)
  same => n,Gosub(sub-tenant-vars,s,1)
  same => n,Answer()
@@ -89,13 +89,13 @@ exten => *8,1,NoOp(=== Group Pickup ===)
  same => n,Pickup()
  same => n,Hangup()
 
-; *8XXX - Directed Pickup (3 dígitos)
+; *8XXX - Directed Pickup (3 digitos)
 exten => _*8XXX,1,NoOp(=== Directed Pickup ${EXTEN:2} ===)
  same => n,Gosub(sub-tenant-vars,s,1)
  same => n,PickupChan(PJSIP/${TENANT_SLUG}_${EXTEN:2})
  same => n,Hangup()
 
-; *8XXXX - Directed Pickup (4 dígitos)
+; *8XXXX - Directed Pickup (4 digitos)
 exten => _*8XXXX,1,NoOp(=== Directed Pickup ${EXTEN:2} ===)
  same => n,Gosub(sub-tenant-vars,s,1)
  same => n,PickupChan(PJSIP/${TENANT_SLUG}_${EXTEN:2})
@@ -103,17 +103,17 @@ exten => _*8XXXX,1,NoOp(=== Directed Pickup ${EXTEN:2} ===)
 
 ; ===== PORTARIA VIRTUAL (GATE CONTROL) =====
 
-; *500 - Abrir Portão Social
+; *500 - Abrir Portao Social
 exten => *500,1,NoOp(=== Gate Open: social ===)
  same => n,Set(GATE_NAME=social)
  same => n,Gosub(open-gate,s,1)
 
-; *501 - Abrir Portão Garagem
+; *501 - Abrir Portao Garagem
 exten => *501,1,NoOp(=== Gate Open: garagem ===)
  same => n,Set(GATE_NAME=garagem)
  same => n,Gosub(open-gate,s,1)
 
-; *502 - Abrir Portão Fundos
+; *502 - Abrir Portao Fundos
 exten => *502,1,NoOp(=== Gate Open: fundos ===)
  same => n,Set(GATE_NAME=fundos)
  same => n,Gosub(open-gate,s,1)
@@ -140,18 +140,18 @@ exten => _*334XXXX,1,NoOp(=== Whisper to ${EXTEN:4} ===)
  same => n,Hangup()
 
 ; ============================================
-; SUB-ROTINA: Abrir Portão
+; SUB-ROTINA: Abrir Portao
 ; ============================================
 [open-gate]
 exten => s,1,NoOp(=== Open Gate: ${GATE_NAME} - Caller: ${CALLERID(num)} ===)
  same => n,Gosub(sub-tenant-vars,s,1)
  
- ; Validar permissão via API
+ ; Validar permissao via API
  same => n,Set(API_URL=http://backend:5000/api/agi/check-gate-permission)
  same => n,Set(QUERY=?tenant=${TENANT_SLUG}&extension=${CALLERID(num)}&gate=${GATE_NAME})
  same => n,Set(RESPONSE=${CURL(${API_URL}${QUERY})})
  
- ; Parse JSON response (simplificado - em produção use jq via System)
+ ; Parse JSON response (simplificado - em producao use jq via System)
  same => n,GotoIf($["${RESPONSE:0:1}" = "{"]?check_allowed:api_error)
  
  same => n(check_allowed),NoOp(Checking permission...)
