--- a/asterisk_etc/routing.conf
+++ b/asterisk_etc/routing.conf
@@ -4,7 +4,7 @@
 ; ============================================
 
 ; ============================================
-; SUB-ROTINA: Resolver variáveis de tenant/ramal
+; SUB-ROTINA: Resolver variaveis de tenant/ramal
 ; Exporta: FROM_ENDPOINT, TENANT_SLUG, FROM_EXTEN, DIAL_OPTIONS
 ; ============================================
 [sub-tenant-vars]
@@ -22,7 +22,7 @@ exten => s,1,NoOp(=== Resolve Tenant Vars ===)
 
 ; ============================================
 ; SUB-ROTINA: Montar endpoint de destino
-; ARG1 = número/ramal destino
+; ARG1 = numero/ramal destino
 ; Retorna GOSUB_RETVAL com endpoint completo
 ; ============================================
 [sub-build-dest-endpoint]
@@ -54,7 +54,7 @@ exten => _X.,1,NoOp(=== Internal Call: ${CALLERID(num)} -> ${EXTEN} ===)
  same => n(normal_call),Set(CALLERID(name)=${FROM_EXTEN})
  same => n,Dial(PJSIP/${DEST_ENDPOINT},30,${DIAL_OPTIONS})
  
- ; Tratamento de não atendimento
+ ; Tratamento de nao atendimento
  same => n,GotoIf($["${DIALSTATUS}" = "NOANSWER"]?voicemail)
  same => n,GotoIf($["${DIALSTATUS}" = "BUSY"]?busy)
  same => n,GotoIf($["${DIALSTATUS}" = "CHANUNAVAIL"]?unavailable)
@@ -81,7 +81,7 @@ exten => _X.,1,NoOp(=== Outbound Call: ${CALLERID(num)} -> ${EXTEN} ===)
  
  same => n,NoOp(TenantID=${CHANNEL(tenantid)} | External: ${FROM_EXTEN}@${TENANT_SLUG} -> ${EXTEN})
  
- ; Buscar rota de saída via API
+ ; Buscar rota de saida via API
  same => n,Set(API_URL=http://backend:5000/api/agi/get-outbound-route)
  same => n,Set(QUERY=?tenantId=${TENANT_SLUG}&number=${EXTEN})
  same => n,Set(RESPONSE=${CURL(${API_URL}${QUERY})})
@@ -113,18 +113,18 @@ exten => _X.,1,NoOp(=== Outbound Call: ${CALLERID(num)} -> ${EXTEN} ===)
  same => n,Hangup()
 
 ; ============================================
-; SUB-ROTINA: Números de Emergência
+; SUB-ROTINA: Numeros de Emergencia
 ; ============================================
 [dial-emergency]
 exten => _X.,1,NoOp(=== Emergency Call: ${EXTEN} ===)
  same => n,Gosub(sub-tenant-vars,s,1)
  same => n,NoOp(TenantID=${CHANNEL(tenantid)} | Emergency tenant=${TENANT_SLUG})
  
- ; Emergências sempre usam trunk prioritário
+ ; Emergencias sempre usam trunk prioritario
  same => n,Set(TRUNK_NAME=trunk-emergency)
  same => n,Dial(PJSIP/${EXTEN}@${TRUNK_NAME},120,${DIAL_OPTIONS})
  
- ; Fallback se trunk não existir
+ ; Fallback se trunk nao existir
  same => n,Answer()
  same => n,Playback(cannot-complete-as-dialed)
  same => n,Hangup()
@@ -146,7 +146,7 @@ exten => _X.,1,NoOp(=== Incoming DID: ${EXTEN} ===)
  ; TODO: Parse JSON e rotear para tenant/extension correto
  ; Exemplo: Goto(ctx-belavista,1000,1)
  
- ; Temporário: IVR genérico
+ ; Temporario: IVR generico
  same => n,Answer()
  same => n,Playback(welcome)
  same => n,Hangup()
