--- a/asterisk_etc/extensions.conf
+++ b/asterisk_etc/extensions.conf
@@ -8,10 +8,11 @@ writeprotect=no
 clearglobalvars=no
 
 [globals]
+; Version source-of-truth: /VERSION
 MAGNUS_VERSION=1.0.0
 
 ; Arquivo gerenciado (base)
 #include extensions_additional.conf
 
-; Arquivo de personalizações locais (não sobrescrever base)
+; Arquivo de personalizacoes locais (nao sobrescrever base)
 #include extensions_custom.conf
