--- a/asterisk_etc/extensions_custom.conf
+++ b/asterisk_etc/extensions_custom.conf
@@ -1,6 +1,6 @@
 ; ============================================
 ; MAGNUS PBX - Extensions Custom
 ; ============================================
-; Use este arquivo para customizações locais.
-; Não edite extensions_additional.conf diretamente.
+; Use este arquivo para customizacoes locais.
+; Nao edite extensions_additional.conf diretamente.
 
