--- a/asterisk_etc/tenants.conf
+++ b/asterisk_etc/tenants.conf
@@ -1,6 +1,6 @@
 ; ============================================
 ; MAGNUS PBX - Tenant Contexts
-; Contextos específicos de cada tenant
+; Contextos especificos de cada tenant
 ; ============================================
 
 ; ============================================
@@ -8,48 +8,48 @@
 ; ============================================
 [tenant-base](features-base)
 ; Template herdado por todos os tenants
-; Herda: features-base → Todos os feature codes (*43, *97, *500, etc)
-; Define: Padrões de discagem interna e externa
+; Herda: features-base -> Todos os feature codes (*43, *97, *500, etc)
+; Define: Padroes de discagem interna e externa
 include => parkedcalls
 
 ; ===== DISCAGEM INTERNA =====
-; Ramais de 3 dígitos (100-999)
+; Ramais de 3 digitos (100-999)
 exten => _XXX,1,Goto(dial-internal,${EXTEN},1)
 
-; Ramais de 4 dígitos (1000-9999)
+; Ramais de 4 digitos (1000-9999)
 exten => _XXXX,1,Goto(dial-internal,${EXTEN},1)
 
 ; ===== DISCAGEM EXTERNA =====
-; Celular 9 dígitos: 9XXXXXXXX
+; Celular 9 digitos: 9XXXXXXXX
 exten => _9XXXXXXXX,1,Goto(dial-outbound,${EXTEN},1)
 
 ; DDD: 0XX9XXXXXXXX ou XX9XXXXXXXX
 exten => _0XX9XXXXXXXX,1,Goto(dial-outbound,${EXTEN},1)
 exten => _XX9XXXXXXXX,1,Goto(dial-outbound,${EXTEN},1)
 
-; Internacional: 00 + código país
+; Internacional: 00 + codigo pais
 exten => _00X.,1,Goto(dial-outbound,${EXTEN},1)
 
-; Fixo 8 dígitos: XXXXXXXX
+; Fixo 8 digitos: XXXXXXXX
 exten => _XXXXXXXX,1,Goto(dial-outbound,${EXTEN},1)
 
-; ===== EMERGÊNCIAS =====
-exten => 190,1,Goto(dial-emergency,${EXTEN},1)  ; Polícia
-exten => 192,1,Goto(dial-emergency,${EXTEN},1)  ; Ambulância
+; ===== EMERGENCIAS =====
+exten => 190,1,Goto(dial-emergency,${EXTEN},1)  ; Policia
+exten => 192,1,Goto(dial-emergency,${EXTEN},1)  ; Ambulancia
 exten => 193,1,Goto(dial-emergency,${EXTEN},1)  ; Bombeiros
 
 ; ============================================
-; CONTEXTOS ESPECÍFICOS DOS TENANTS
+; CONTEXTOS ESPECIFICOS DOS TENANTS
 ; ============================================
 
 [ctx-belavista](tenant-base)
 ; Tenant: Bela Vista
 ; Herda todas as features e routing de tenant-base
-; Adicione customizações específicas aqui se necessário
+; Adicione customizacoes especificas aqui se necessario
 
 [ctx-acme](tenant-base)
 ; Tenant: ACME Corporation
-; Customizações específicas podem ser adicionadas aqui
+; Customizacoes especificas podem ser adicionadas aqui
 
 [ctx-techno](tenant-base)
 ; Tenant: Techno Solutions
