chore(encoding): sanitize asterisk_etc conf/md files to ASCII-safe text

--- a/asterisk_etc/ari.conf
+++ b/asterisk_etc/ari.conf
@@ -1,9 +1,9 @@
-[general]
+ï»¿[general]
 enabled = yes
 pretty = yes
 allowed_origins = *
 
-[admin_magnus] ; Este será o usuário da sua API C#
+[admin_magnus] ; Este sera o usuario da sua API C#
 type = user
 read_only = no
 password = Suporte16$
