--- a/asterisk_etc/backup/extensions-modular.conf
+++ b/asterisk_etc/backup/extensions-modular.conf
@@ -1,18 +1,18 @@
-; ============================================
+﻿; ============================================
 ; MAGNUS PBX - Master Dialplan
 ; Asterisk 22.8.2 + PostgreSQL Realtime
 ; ============================================
 ;
 ; ESTRUTURA MODULAR:
-; - extensions-features.conf → Feature codes (*43, *97, *500, etc)
-; - routing.conf → Sub-rotinas de discagem (dial-internal, dial-outbound, etc)
-; - tenants.conf → Contextos dos tenants (ctx-belavista, ctx-acme, etc)
+; - extensions-features.conf a Feature codes (*43, *97, *500, etc)
+; - routing.conf a Sub-rotinas de discagem (dial-internal, dial-outbound, etc)
+; - tenants.conf a Contextos dos tenants (ctx-belavista, ctx-acme, etc)
 ;
-; Benefícios:
-; ✓ Organização clara por responsabilidade
-; ✓ Fácil manutenção e debug
-; ✓ Adicionar novos tenants sem modificar lógica
-; ✓ Features isolados para testes
+; BenefAcios:
+; a OrganizaAAo clara por responsabilidade
+; a FAcil manutenAAo e debug
+; a Adicionar novos tenants sem modificar lAgica
+; a Features isolados para testes
 ;
 ; ============================================
 
@@ -22,7 +22,7 @@ writeprotect=no
 clearglobalvars=no
 
 [globals]
-; Variáveis globais
+; VariAveis globais
 MAGNUS_VERSION=1.0.0
 BACKEND_API=http://backend:5000/api
 
@@ -35,7 +35,7 @@ BACKEND_API=http://backend:5000/api
 #include tenants.conf
 
 ; ============================================
-; CONTEXTO PADRÃO (Fallback)
+; CONTEXTO PADRAO (Fallback)
 ; ============================================
 [default]
 exten => _X.,1,NoOp(=== Unrouted Call: ${EXTEN} ===)
@@ -53,3 +53,4 @@ exten => _X.,1,NoOp(=== Unrouted Call: ${EXTEN} ===)
 ; Exemplo:
 ; exten => 1001@belavista,hint,PJSIP/1001@belavista
 ; exten => 1002@belavista,hint,PJSIP/1002@belavista
+
