--- a/asterisk_etc/backup/extensions_hibrido.conf
+++ b/asterisk_etc/backup/extensions_hibrido.conf
@@ -1,6 +1,6 @@
-; ============================================
-; MAGNUS PBX - DIALPLAN HÍBRIDO
-; Abordagem: Padrões fixos em .conf + Rotas dinâmicas via AGI/API
+﻿; ============================================
+; MAGNUS PBX - DIALPLAN HABRIDO
+; Abordagem: PadrAes fixos em .conf + Rotas dinAmicas via AGI/API
 ; ============================================
 
 [general]
@@ -10,7 +10,7 @@ clearglobalvars=no
 
 ; ============================================
 ; TENANT BASE TEMPLATE
-; Padrões fixos que não mudam
+; PadrAes fixos que nAo mudam
 ; ============================================
 [tenant-base](!)
 
@@ -54,10 +54,10 @@ exten => _XXXX,1,NoOp(=== Internal Call: ${CALLERID(num)} -> ${EXTEN} ===)
  same => n(denied),Playback(access-denied)
  same => n,Hangup()
 
-; ===== PORTÃO/GATE - *500 + DDD =====
-; *500 = Portão Social
-; *501 = Portão Garagem
-; *502 = Portão Fundos
+; ===== PORTAO/GATE - *500 + DDD =====
+; *500 = PortAo Social
+; *501 = PortAo Garagem
+; *502 = PortAo Fundos
 exten => _*50X,1,NoOp(=== Gate Open Request: ${CALLERID(num)} -> Gate ${EXTEN:3:1} ===)
  same => n,Set(TENANT_SLUG=${CUT(CHANNEL,@,2)})
  same => n,Set(TENANT_SLUG=${CUT(TENANT_SLUG,-,2)})
@@ -75,10 +75,10 @@ exten => _*50X,1,NoOp(=== Gate Open Request: ${CALLERID(num)} -> Gate ${EXTEN:3:
  same => n,Hangup()
 
 ; ===== CHAMADAS EXTERNAS (OUTBOUND) =====
-; Celular: 9XXXXXXXX (9 dígitos)
-; Fixo: XXXXXXXX (8 dígitos)
+; Celular: 9XXXXXXXX (9 dAgitos)
+; Fixo: XXXXXXXX (8 dAgitos)
 ; DDD: 0XX + XXXXXXXX
-; DDI: 00XX + número
+; DDI: 00XX + nAmero
 exten => _9XXXXXXXX,1,NoOp(=== Outbound Call: ${CALLERID(num)} -> ${EXTEN} ===)
  same => n,Set(TENANT_SLUG=${CUT(CHANNEL,@,2)})
  same => n,Set(TENANT_SLUG=${CUT(TENANT_SLUG,-,2)})
@@ -106,7 +106,7 @@ exten => _00.!,1,NoOp(=== Outbound DDI: ${CALLERID(num)} -> ${EXTEN} ===)
  same => n(no-route),Playback(ss-noservice)
  same => n,Hangup()
 
-; ===== EMERGÊNCIAS (SEMPRE PERMITIDO) =====
+; ===== EMERGASNCIAS (SEMPRE PERMITIDO) =====
 exten => 190,1,NoOp(=== Emergency: Police ===)
  same => n,Dial(PJSIP/190@trunk-emergency,30)
  same => n,Hangup()
@@ -120,12 +120,12 @@ exten => 193,1,NoOp(=== Emergency: Fire Department ===)
  same => n,Hangup()
 
 ; ============================================
-; SUBROUTINE: Verificar Permissões
+; SUBROUTINE: Verificar PermissAes
 ; ============================================
 [check-permissions]
 exten => s,1,NoOp(=== Checking Permissions: ${ARG1} from ${ARG2} in ${ARG3} ===)
  same => n,Set(PERMISSION_OK=1)
- ; TODO: Implementar lógica de permissões via AGI/API
+ ; TODO: Implementar lAgica de permissAes via AGI/API
  ; Por enquanto sempre permite
  same => n,Return()
 
@@ -140,7 +140,7 @@ exten => s,1,NoOp(=== Checking Permissions: ${ARG1} from ${ARG2} in ${ARG3} ===)
 
 ; ============================================
 ; CONTEXTO DE ENTRADA (DIDs)
-; Chamadas chegam aqui e são roteadas
+; Chamadas chegam aqui e sAo roteadas
 ; ============================================
 [from-external]
 exten => _X.,1,NoOp(=== Incoming Call: ${CALLERID(num)} -> DID ${EXTEN} ===)
@@ -158,3 +158,4 @@ exten => _X.,1,NoOp(=== Incoming Call: ${CALLERID(num)} -> DID ${EXTEN} ===)
 exten => _X.,1,NoOp(=== Default Context: ${EXTEN} ===)
  same => n,Playback(invalid)
  same => n,Hangup()
+
