--- a/asterisk_etc/extconfig.conf
+++ b/asterisk_etc/extconfig.conf
@@ -1,16 +1,16 @@
-[settings]
+﻿[settings]
 ; ============================================
-; REALTIME PJSIP - Endpoints dinâmicos
+; REALTIME PJSIP - Endpoints dinAmicos
 ; ============================================
 ps_endpoints => pgsql,general
 ps_auths => pgsql,general
 ps_aors => pgsql,general
-; Transport definido em pjsip.conf (não funciona bem via realtime)
+; Transport definido em pjsip.conf (nAo funciona bem via realtime)
 ps_contacts => pgsql,general
-; ps_endpoint_id_ips: identificação por IP (schema padrão PJSIP)
+; ps_endpoint_id_ips: identificaAAo por IP (schema padrAo PJSIP)
 ps_endpoint_id_ips => pgsql,general
-; ps_domain_aliases: CRÍTICO para multi-tenant por DNS
-; Mapeia: belavista.magnussystem.com.br → slug 'belavista' → endpoint 1001@belavista
+; ps_domain_aliases: CRATICO para multi-tenant por DNS
+; Mapeia: belavista.magnussystem.com.br a slug 'belavista' a endpoint 1001@belavista
 ps_domain_aliases => pgsql,general
 
 ; ============================================
@@ -25,13 +25,14 @@ queues => pgsql,general
 queue_members => pgsql,general
 
 ; ============================================
-; IMPORTANTE: Extensions NÃO deve estar aqui!
+; IMPORTANTE: Extensions NAO deve estar aqui!
 ; ============================================
-; O Realtime de extensions NÃO funciona com pattern matching.
-; Quando você disca *43, o Asterisk busca WHERE exten='*43' (exato).
-; Ele NÃO reconhece patterns como _*X. ou _XXXX no banco.
+; O Realtime de extensions NAO funciona com pattern matching.
+; Quando vocA disca *43, o Asterisk busca WHERE exten='*43' (exato).
+; Ele NAO reconhece patterns como _*X. ou _XXXX no banco.
 ;
-; SOLUÇÃO: Todos os patterns devem estar no extensions.conf (arquivo físico).
-; Para dados dinâmicos, use AGI scripts ou func_odbc.
+; SOLUAAO: Todos os patterns devem estar no extensions.conf (arquivo fAsico).
+; Para dados dinAmicos, use AGI scripts ou func_odbc.
 ;
-; ❌ NÃO USE: extensions => pgsql,general,extensions
+; a NAO USE: extensions => pgsql,general,extensions
+
