--- a/asterisk_etc/minivm.conf
+++ b/asterisk_etc/minivm.conf
@@ -1,4 +1,4 @@
-;
+ï»¿;
 ; Mini-Voicemail Configuration
 ; for the MiniVM set of applications
 ;
@@ -148,10 +148,10 @@ military=Zulu|'vm-received' q 'digits/at' H N 'hours' 'phonetic/z_p'
 ; messagebody = Format		; Message body definition with variables
 ;
 [template-sv_SE_email]
-messagebody=Hej ${MVM_NAME}:\n\n\tDu har fått ett röstbrevlåde-meddelande från ${MVM_CALLERID}.\nLängd: ${MVM_DUR}\nMailbox ${MVM_MAILBOX}\nDatum:  ${MVM_DATE}. \nMeddelandet bifogas det här brevet. Om du inte kan läsa det, kontakta intern support. \nHälsningar\n\n\t\t\t\t--Asterisk\n
-subject = Du har fått röstmeddelande (se bilaga)
+messagebody=Hej ${MVM_NAME}:\n\n\tDu har fatt ett rostbrevlade-meddelande fran ${MVM_CALLERID}.\nLangd: ${MVM_DUR}\nMailbox ${MVM_MAILBOX}\nDatum:  ${MVM_DATE}. \nMeddelandet bifogas det har brevet. Om du inte kan lasa det, kontakta intern support. \nHalsningar\n\n\t\t\t\t--Asterisk\n
+subject = Du har fatt rostmeddelande (se bilaga)
 fromemail = swedish-voicemail-service@stockholm.example.com
-fromaddress = Asterisk Röstbrevlåda
+fromaddress = Asterisk Rostbrevlada
 charset=iso-8859-1
 attachmedia=yes
 dateformat=%A, %d %B %Y at %H:%M:%S
@@ -166,14 +166,14 @@ dateformat=%A, %B %d, %Y at %r
 
 ;[template-sv_SE_pager]
 ;templatefile = templates/pager_sv_se.txt
-;subject = Du har fått voicemail
+;subject = Du har fatt voicemail
 ;charset=iso-8859-1
 ;attachmedia=no
 ;locale=sv_SE
 
 ;[template-nb_NO_email]
 ;templatefile = templates/email_nb_NO.txt
-;subject = Du har fått voicemail
+;subject = Du har fatt voicemail
 ;charset=iso-8859-1
 ;locale=nb_NO
 
@@ -216,3 +216,4 @@ dateformat=%A, %B %d, %Y at %r
 ;	[user2@example.com](template@example.com)	; Declare user2 account using template
 ;	fullname = Olle E. Johansson
 ;					; User inherits everything from template
+
