--- a/asterisk_etc/modules.conf
+++ b/asterisk_etc/modules.conf
@@ -1,7 +1,7 @@
-[modules]
+﻿[modules]
 autoload=yes
 
-; Desativa os módulos que estão sujando o seu log no Portainer
+; Desativa os mAdulos que estAo sujando o seu log no Portainer
 noload => chan_alsa.so
 noload => chan_oss.so
 noload => res_adsi.so
@@ -17,10 +17,10 @@ noload => res_hep_rtcp.so
 ; Garante que o driver do Postgres carregue primeiro
 load => res_config_pgsql.so
 
-; CRITICAL: pbx_config.so carrega o extensions.conf (dialplan estático)
+; CRITICAL: pbx_config.so carrega o extensions.conf (dialplan estAtico)
 load => pbx_config.so
 
-; Módulos de CDR (Call Detail Records)
+; MAdulos de CDR (Call Detail Records)
 load => app_cdr.so
 load => cdr_custom.so
 load => cdr_pgsql.so
@@ -32,3 +32,4 @@ noload => app_getcpeid.so
 noload => res_hep.so
 noload => res_hep_pjsip.so
 noload => res_hep_rtcp.so
+
