--- a/asterisk_etc/pjsip.conf
+++ b/asterisk_etc/pjsip.conf
@@ -1,4 +1,4 @@
-; ============================================
+﻿; ============================================
 ; MAGNUS PBX - PJSIP Configuration
 ; Asterisk 22.8.2 Multi-tenant Realtime
 ; ============================================
@@ -9,10 +9,10 @@ user_agent=Magnus-PBX-Asterisk22
 max_forwards=70
 keep_alive_interval=90
 contact_expiration_check_interval=30
-; Necessário para multi-tenant por domínio (ramal@slug)
+; NecessArio para multi-tenant por domAnio (ramal@slug)
 disable_multi_domain=no
-; CRÍTICO para multi-tenant: username usa ps_domain_aliases para resolver ramal@slug
-; Ordem recomendada SaaS: 1) auth_username (AuthID único) → 2) username+domínio → 3) ip → 4) anon
+; CRATICO para multi-tenant: username usa ps_domain_aliases para resolver ramal@slug
+; Ordem recomendada SaaS: 1) auth_username (AuthID Anico) a 2) username+domAnio a 3) ip a 4) anon
 endpoint_identifier_order=auth_username,username,ip,anonymous
 
 ; ============================================
@@ -20,7 +20,7 @@ endpoint_identifier_order=auth_username,username,ip,anonymous
 ; ============================================
 [system]
 type=system
-; Ajuste de memória para PJSIP Realtime com 1.000+ tenants
+; Ajuste de memAria para PJSIP Realtime com 1.000+ tenants
 timer_t1=500
 timer_b=32000
 threadpool_initial_size=10
@@ -30,29 +30,29 @@ threadpool_max_size=50
 disable_tcp_switch=yes
 
 ; ============================================
-; TRANSPORT - UDP (GENÉRICO para Multi-tenant)
+; TRANSPORT - UDP (GENARICO para Multi-tenant)
 ; ============================================
-; Transport genérico usado por TODOS os tenants.
-; SEM campo 'domain' = aceita QUALQUER domínio.
-; O matching tenant/domain é feito via ps_domain_aliases (database).
+; Transport genArico usado por TODOS os tenants.
+; SEM campo 'domain' = aceita QUALQUER domAnio.
+; O matching tenant/domain A feito via ps_domain_aliases (database).
 ;
 ; Vantagens para SaaS:
 ; - Adicione novos tenants sem editar este arquivo
-; - Totalmente dinâmico via banco de dados
-; - Escalável para centenas de tenants
+; - Totalmente dinAmico via banco de dados
+; - EscalAvel para centenas de tenants
 ;
 ; Como funciona:
 ; 1. Softphone registra: 1001@belavista.magnussystem.com.br
-; 2. Transport aceita (sem restrição)
-; 3. ps_domain_aliases.domain_alias mapeia: belavista.magnussystem.com.br → belavista
+; 2. Transport aceita (sem restriAAo)
+; 3. ps_domain_aliases.domain_alias mapeia: belavista.magnussystem.com.br a belavista
 ; 4. Asterisk busca endpoint: 1001@belavista no banco
 
 [transport-udp]
 type=transport
 protocol=udp
 bind=0.0.0.0:5060
-; SEM campo 'domain' = aceita todos os domínios (matching via ps_domain_aliases)
-; Docker/NAT: anunciar IP acessível pelos telefones (evita contato 172.x interno)
+; SEM campo 'domain' = aceita todos os domAnios (matching via ps_domain_aliases)
+; Docker/NAT: anunciar IP acessAvel pelos telefones (evita contato 172.x interno)
 external_signaling_address=10.3.2.253
 external_media_address=10.3.2.253
 ; Marcar apenas a rede interna do container como local.
@@ -62,7 +62,7 @@ local_net=172.20.0.0/16
 ; ============================================
 ; REALTIME ENDPOINTS, AUTHS, AORS
 ; ============================================
-; Os endpoints são carregados do banco de dados PostgreSQL.
+; Os endpoints sAo carregados do banco de dados PostgreSQL.
 ; Veja sorcery.conf e extconfig.conf para o mapeamento.
 ;
 ; Estrutura no banco:
@@ -74,3 +74,4 @@ local_net=172.20.0.0/16
 ; INSERT INTO ps_endpoints (id, transport, aors, auth, context) VALUES
 ; ('1001@belavista', 'transport-udp', '1001@belavista', '1001@belavista', 'ctx-belavista');
 ; ============================================
+
