--- a/asterisk_etc/sorcery.conf
+++ b/asterisk_etc/sorcery.conf
@@ -1,25 +1,25 @@
-; ============================================
+﻿; ============================================
 ; MAGNUS PBX - Sorcery Configuration
 ; ============================================
-; Sorcery é o sistema de configuração dinâmica do Asterisk.
+; Sorcery A o sistema de configuraAAo dinAmica do Asterisk.
 ; Ele permite carregar objetos de diferentes fontes (arquivo, realtime, etc).
 ;
 ; Para PJSIP Realtime multi-tenant, configuramos:
 ; - endpoints, auths, aors do banco de dados
-; - Cada tenant tem seus próprios registros
+; - Cada tenant tem seus prAprios registros
 ; ============================================
 
 [res_pjsip]
-; PJSIP usa Realtime para carregar configurações do PostgreSQL
+; PJSIP usa Realtime para carregar configuraAAes do PostgreSQL
 endpoint=realtime,ps_endpoints
 auth=realtime,ps_auths
 aor=realtime,ps_aors
-; transport definido em pjsip.conf (realtime não funciona bem)
+; transport definido em pjsip.conf (realtime nAo funciona bem)
 contact=realtime,ps_contacts
-; Domain alias para matching multi-tenant dinâmico
+; Domain alias para matching multi-tenant dinAmico
 ; ps_domain_aliases.domain = o que o softphone usa como servidor SIP
-; ps_domain_aliases.id     = o slug do tenant (parte após @ no endpoint id)
-; Fluxo: softphone usa belavista.magnussystem.com.br → alias id=belavista → endpoint 1001@belavista
+; ps_domain_aliases.id     = o slug do tenant (parte apAs @ no endpoint id)
+; Fluxo: softphone usa belavista.magnussystem.com.br a alias id=belavista a endpoint 1001@belavista
 domain_alias=realtime,ps_domain_aliases
 identify=realtime,ps_endpoint_id_ips
 
@@ -29,8 +29,8 @@ identify=realtime,ps_endpoint_id_ips
 ; ============================================
 ; NOTA IMPORTANTE SOBRE TRANSPORTS
 ; ============================================
-; Se você tem muitos tenants usando o MESMO transport,
-; é mais eficiente definir transports no pjsip.conf:
+; Se vocA tem muitos tenants usando o MESMO transport,
+; A mais eficiente definir transports no pjsip.conf:
 ;
 ; [transport-udp]
 ; type=transport
@@ -38,5 +38,6 @@ identify=realtime,ps_endpoint_id_ips
 ; bind=0.0.0.0:5060
 ;
 ; Apenas endpoints, auths e aors precisam estar no banco.
-; Transports podem ser estáticos no arquivo.
+; Transports podem ser estAticos no arquivo.
 ; ============================================
+
