--- a/asterisk_etc/http.conf
+++ b/asterisk_etc/http.conf
@@ -1,5 +1,5 @@
-[general]
+ï»¿[general]
 enabled=yes
 bindaddr=0.0.0.0
-bindport=8088 ; Porta para conexões não-seguras de teste
+bindport=8088 ; Porta para conexoes nao-seguras de teste
 enablestatic=yes
