--- a/asterisk_etc/extensions.conf
+++ b/asterisk_etc/extensions.conf
@@ -12,7 +12,7 @@ clearglobalvars=no
 MAGNUS_VERSION=1.0.0
 
 ; Arquivo gerenciado (base)
-#include extensions_additional.conf
+#include magnus-conf.d/extensions_additional.conf
 
 ; Arquivo de personalizacoes locais (nao sobrescrever base)
-#include extensions_custom.conf
+#include magnus-conf.d/extensions_custom.conf
