--- a/asterisk_etc/features.conf
+++ b/asterisk_etc/features.conf
@@ -3,13 +3,13 @@
 ; ============================================
 
 [general]
-#include features_general_additional.conf
-#include features_general_custom.conf
+#include magnus-conf.d/features_general_additional.conf
+#include magnus-conf.d/features_general_custom.conf
 
 [featuremap]
-#include features_featuremap_additional.conf
-#include features_featuremap_custom.conf
+#include magnus-conf.d/features_featuremap_additional.conf
+#include magnus-conf.d/features_featuremap_custom.conf
 
 [applicationmap]
-#include features_applicationmap_additional.conf
-#include features_applicationmap_custom.conf
+#include magnus-conf.d/features_applicationmap_additional.conf
+#include magnus-conf.d/features_applicationmap_custom.conf
