feat(outbound): implement SaaS routing v2 with DB-driven rules and generic dialplan outbound

--- a/asterisk_etc/magnus-conf.d/tenants.conf
+++ b/asterisk_etc/magnus-conf.d/tenants.conf
@@ -20,18 +20,8 @@ exten => _XXX,1,Goto(dial-internal,${EXTEN},1)
 exten => _XXXX,1,Goto(dial-internal,${EXTEN},1)
 
 ; ===== DISCAGEM EXTERNA =====
-; Celular 9 digitos: 9XXXXXXXX
-exten => _9XXXXXXXX,1,Goto(dial-outbound,${EXTEN},1)
-
-; DDD: 0XX9XXXXXXXX ou XX9XXXXXXXX
-exten => _0XX9XXXXXXXX,1,Goto(dial-outbound,${EXTEN},1)
-exten => _XX9XXXXXXXX,1,Goto(dial-outbound,${EXTEN},1)
-
-; Internacional: 00 + codigo pais
-exten => _00X.,1,Goto(dial-outbound,${EXTEN},1)
-
-; Fixo 8 digitos: XXXXXXXX
-exten => _XXXXXXXX,1,Goto(dial-outbound,${EXTEN},1)
+; Saida generica (roteamento decidido por regras no banco/API)
+exten => _X.,1,Goto(dial-outbound,${EXTEN},1)
 
 ; ===== EMERGENCIAS =====
 exten => 190,1,Goto(dial-emergency,${EXTEN},1)  ; Policia
