--- a/asterisk_etc/magnus-conf.d/routing.conf
+++ b/asterisk_etc/magnus-conf.d/routing.conf
@@ -81,20 +81,18 @@ exten => _X.,1,NoOp(=== Outbound Call: ${CALLERID(num)} -> ${EXTEN} ===)
  
  same => n,NoOp(TenantID=${CHANNEL(tenantid)} | External: ${FROM_EXTEN}@${TENANT_SLUG} -> ${EXTEN})
  
- ; Buscar rota de saida via API
+ ; Buscar rota de saida via API (retorno texto: trunk|numero_normalizado)
  same => n,Set(API_URL=http://backend:5000/api/agi/get-outbound-route)
- same => n,Set(QUERY=?tenantId=${TENANT_SLUG}&number=${EXTEN})
- same => n,Set(RESPONSE=${CURL(${API_URL}${QUERY})})
+ same => n,Set(QUERY=?tenant=${TENANT_SLUG}&number=${EXTEN}&format=text)
+ same => n,Set(ROUTE_RESULT=${CURL(${API_URL}${QUERY})})
+ same => n,NoOp(Outbound router result: ${ROUTE_RESULT})
+
+ same => n,Set(TRUNK_NAME=${CUT(ROUTE_RESULT,|,1)})
+ same => n,Set(OUT_NUMBER=${CUT(ROUTE_RESULT,|,2)})
+ same => n,ExecIf($["${OUT_NUMBER}" = ""]?Set(OUT_NUMBER=${EXTEN}))
+ same => n,GotoIf($["${TRUNK_NAME}" != ""]?dial_trunk:no_route)
  
- ; Parse JSON (simplificado)
- same => n,GotoIf($["${RESPONSE}" != ""]?check_trunk:no_route)
- 
- same => n(check_trunk),NoOp(Looking for trunk...)
- ; TODO: Parse JSON properly - por enquanto define trunk fixo
- same => n,Set(TRUNK_NAME=trunk-provider)
- same => n,GotoIf($["${TRUNK_NAME}" != ""]?dial_trunk:no_trunk)
- 
- same => n(dial_trunk),Dial(PJSIP/${EXTEN}@${TRUNK_NAME},60,${DIAL_OPTIONS})
+ same => n(dial_trunk),Dial(PJSIP/${OUT_NUMBER}@${TRUNK_NAME},60,${DIAL_OPTIONS})
  same => n,GotoIf($["${DIALSTATUS}" = "BUSY"]?busy:unavail)
  same => n,Hangup()
  
@@ -102,10 +100,6 @@ exten => _X.,1,NoOp(=== Outbound Call: ${CALLERID(num)} -> ${EXTEN} ===)
  same => n,Hangup()
  
  same => n(unavail),Playback(all-circuits-busy-now)
- same => n,Hangup()
- 
- same => n(no_trunk),Answer()
- same => n,Playback(cannot-complete-as-dialed)
  same => n,Hangup()
  
  same => n(no_route),Answer()
