--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,10 +1,15 @@
 # Magnus PBX Frontend - Environment Variables
 
-# Backend API URL (usado pelo Vite proxy)
-VITE_API_URL=http://localhost:5000
+# Base URL da API usada no runtime frontend
+# Em Docker com nginx proxy, manter /api
+VITE_API_BASE_URL=/api
 
-# SignalR Hub URL
-VITE_SIGNALR_HUB_URL=http://localhost:5000/hubs/asterisk
+# SignalR Hub URL usada no runtime frontend
+# Em Docker com nginx proxy, manter /hubs/asterisk
+VITE_SIGNALR_HUB_URL=/hubs/asterisk
+
+# Target do proxy do Vite no desenvolvimento local
+VITE_DEV_BACKEND_TARGET=http://localhost:5000
 
 # Asterisk WebRTC Websocket
 VITE_ASTERISK_WS_URL=ws://localhost:8089/ws
