--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
-    "typescript": "^5.3.0",
-    "vue-tsc": "^1.8.0",
+    "typescript": "5.4.5",
+    "vue-tsc": "2.0.29",
     "vite": "^5.0.0"
   }
 }
