--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,14 @@
     "pinia": "^2.1.0",
     "axios": "^1.6.0",
     "@microsoft/signalr": "^8.0.0",
-    "jssip": "^3.10.0"
+    "jssip": "^3.10.0",
+    "lucide-vue-next": "^0.469.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.4.5",
     "vue-tsc": "2.0.29",
     "vite": "^5.0.0"
